@@ -5,6 +5,8 @@
 mlUnit 1.9.6 (2023-10-20)
 -------------------------
 
+  - Compatibility with MATLAB R2023b.
+
   - Fix: When using the Ant automation, MATLAB's console output will
     now actually be put out again.
 
